UI changes(still have to fix some edge cases for dark mode)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -183,3 +183,12 @@ body.dark-mode {
 .dark-mode .MuiBox-root {
   background-color: transparent !important;
 }
+
+.dark-mode .MuiPaper-root {
+  background-color: #1e1e1e !important;
+  color: white !important;
+}
+
+.dark-mode .MuiRadio-root {
+  color: white !important;
+}
